--- a/_css/style.css
+++ b/_css/style.css
@@ -7,6 +7,14 @@
     font-family: "Inter";
     src: url("../_fonts/Inter-VariableFont_slnt\,wght.ttf");
 }
+@font-face {
+    font-family: "Chaka";
+    src: url("../_fonts/ChakraPetch-Medium.ttf");
+}
+body{
+    background-color: #c9d6ff;
+    background: linear-gradient(to right, #FFFFFF, #D9D9D9);
+}
 h1#titulo {
     font-size: 40pt;
     color: #3c6e71;
@@ -16,6 +24,8 @@ h1#titulo {
     top: -90px;
     position: relative;
 }
+
+
 
 header img {
     position: relative;
@@ -62,7 +72,17 @@ header nav ul li:hover{
 }
 
 section{
-    height: 1200px;
+    height: 1500px;
+}
+section h1{
+    background: linear-gradient(to right, #3c6e71,#284b63);
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    text-shadow: 2px 1px 1px black;
+    text-transform: uppercase;
+    font-family: "Chaka"
 }
 
 footer{
