--- a/_css/style.css
+++ b/_css/style.css
@@ -71,10 +71,63 @@ header nav ul li:hover{
     background-color: #154244;
 }
 
-section{
-    height: 1500px;
+
+.livro-container{
+    margin-left: 25px;
 }
-section h1{
+
+.livros-sessao{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.topico{
+    font-family: "Chaka";
+    font-size: 15pt;
+    color: black;
+    text-transform: uppercase;
+    border-bottom: 10px;
+}
+
+.livro{
+    display: inline-block;
+}
+
+.livro img{
+    width: 197px;
+    height: 256px;
+    object-fit: cover;
+    border: 4px solid #3c6e71;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+.titulo-livro{
+    position: relative;
+    font-size: 10pt;
+    color: black;
+    font-family: "Inter";
+    text-align: center;
+    background-color: #D9D9D9;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.autor{
+    text-decoration: underline;
+    font-family: "Inter";
+    font-size: 10pt;
+}
+
+.valor{
+    font-family: "Logo";
+    font-size: 12pt;
+    color: #284b63;
+}
+
+section h1.titulo{
     background: linear-gradient(to right, #3c6e71,#284b63);
     padding: 10px;
     border-radius: 5px;
