--- a/_css/style.css
+++ b/_css/style.css
@@ -99,7 +99,7 @@ header nav ul li:hover{
     width: 197px;
     height: 256px;
     object-fit: cover;
-    border: 4px solid #3c6e71;
+    border: 6px solid #3c6e71;
     margin: 20px;
     border-radius: 5px;
 }
@@ -127,6 +127,16 @@ header nav ul li:hover{
     color: #284b63;
 }
 
+.compra{
+    background-color: #154244;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 5px;
+    font-family: "Chaka";
+    font-size: 10pt;
+}
 section h1.titulo{
     background: linear-gradient(to right, #3c6e71,#284b63);
     padding: 10px;
