--- a/_css/style.css
+++ b/_css/style.css
@@ -14,6 +14,9 @@
 body{
     background-color: #c9d6ff;
     background: linear-gradient(to right, #FFFFFF, #D9D9D9);
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 h1#titulo {
     font-size: 40pt;
@@ -36,7 +39,7 @@ header img {
 }
 
 header{
-    height: 300px;
+    height: 200px;
 }
 
 header nav ul{
@@ -73,11 +76,12 @@ header nav ul li:hover{
 
 
 .livro-container{
-    margin-left: 25px;
+    margin-left: 15px;
+    margin-bottom: 70px;
 }
 
 .livros-sessao{
-    flex: 1;
+    flex: 1 1 200px;
     display: flex;
     flex-direction: column;
 }
@@ -89,6 +93,7 @@ header nav ul li:hover{
     color: black;
     text-transform: uppercase;
     border-bottom: 10px;
+    text-decoration: underline;
 }
 
 .livro{
@@ -113,6 +118,7 @@ header nav ul li:hover{
     background-color: #D9D9D9;
     border-radius: 5px;
     margin-right: 10px;
+    border: 1px solid black;
 }
 
 .autor{
@@ -160,7 +166,8 @@ footer h1{
     padding: 10px;
     color: white;
     text-shadow: 2px 1px 1px black;
-    font-family:'Courier New', Courier, monospace;
+    font-family: "Chaka";
+    font-size: 15pt;
 }
 
 footer a{
