--- a/_css/style.css
+++ b/_css/style.css
@@ -30,7 +30,7 @@ h1#titulo {
 
 
 
-header img {
+header#cabecalho img {
     position: relative;
     display: flex;
     height: 100px;
@@ -38,20 +38,19 @@ header img {
     top: 30px;
 }
 
-header{
+header#cabecalho{
     height: 200px;
 }
 
-header nav ul{
+header#cabecalho nav ul{
     list-style: none;
     text-transform: UPPERCASE;
     position: absolute;
     top: 0px;
     left: 400px;
-
 }
 
-header li{
+header#cabecalho li{
     display: inline-block;
     padding: 10px;
     margin: 50px;
@@ -59,18 +58,18 @@ header li{
     transition: background-color 1s;
 }
 
-header li a{
+header#cabecalho li a{
     text-decoration: underline;
     color: black;
     font-family: "Inter";
     font-size: 15pt;
 }
-header li a:hover{
+header#cabecalho li a:hover{
     text-decoration: underline;
     color: white;
 }
 
-header nav ul li:hover{
+header#cabecalho nav ul li:hover{
     background-color: #154244;
 }
 
@@ -154,7 +153,7 @@ header nav ul li:hover{
     font-size: 10pt;
     border: 2px solid black;
 }
-section h1.titulo{
+section#sessao h1.titulo{
     background: linear-gradient(to right, #3c6e71,#284b63);
     padding: 10px;
     border-radius: 5px;
@@ -165,11 +164,11 @@ section h1.titulo{
     font-family: "Chaka"
 }
 
-footer{
+footer#rodape{
     clear: both;
 }
 
-footer h1{
+footer#rodape h1{
     text-align: center;
     background-color: #284b63;
     display: block;
@@ -181,13 +180,13 @@ footer h1{
     font-size: 15pt;
 }
 
-footer a{
+footer#rodape a{
     text-decoration: underline;
     color: white;
     transition: background-color 1s;
 }
 
-footer a:hover{
+footer#rodape a:hover{
     background-color: white;
     color: #284b63;
     padding: 7px;
