--- a/_css/login.css
+++ b/_css/login.css
@@ -144,6 +144,7 @@ header nav ul li:hover{
     border-radius: 8px;
     width: 100%;
     outline: none;
+    box-shadow: 2px 2px 1px black;
 }
 
 .form-container{
@@ -170,6 +171,10 @@ header nav ul li:hover{
     z-index: 1;
 }
 
+#book{
+    margin-right: 5px;
+    font-size: 30pt;
+}
 .container.active .sign-up{
     transform: translateX(100%);
     opacity: 1;
