--- a/_css/style.css
+++ b/_css/style.css
@@ -104,7 +104,24 @@ li .bi:hover{
     border-bottom: 10px;
     text-decoration: underline;
 }
-
+.ver-tudo a{
+    text-align: right;
+    text-decoration: underline;
+    color: #284b63;
+    font-size: 10pt;
+    font-family: "Inter";
+    position: relative;
+    left: 1200px;
+    top: -40px;
+    margin-bottom: 0px;
+}
+.ver-tudo a:hover{
+    background-color: #284b63;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    text-shadow: 1px 1px 1px black;
+}
 .livro{
     display: inline-block;
 }
