--- a/_css/sobre.css
+++ b/_css/sobre.css
@@ -23,4 +23,33 @@ section#sessao-sobre h1{
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 20px;
+    position: relative;
+}
+
+section#sessao-sobre p{
+    text-align:justify;
+    text-indent: 40px;
+    font-family: "Inter";
+    font-size: 10pt;
+    margin-bottom: 30px;
+    padding: 10px;
+    margin-right: 20px;
+}
+
+
+section#sessao-sobre ol{
+    font-family: "Inter";
+    padding: 10px;
+    margin-left: 20px;
+    font-size: 10pt;
+}
+
+section#sessao-sobre li{
+    margin-bottom: 20px;
+}
+section#sessao-sobre span{
+    text-decoration:underline;
+    text-transform: uppercase;
+    font-size: 11pt;
+    font-weight: bold;
 }
