--- a/_css/sobre.css
+++ b/_css/sobre.css
@@ -98,6 +98,52 @@ section#sessao-sobre p{
     margin-right: 20px;
 }
 
+.matriz-swot{
+    display: inline-flex;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    position: relative;
+    left: -70px;
+}
+.matriz-swot h1#titulo{
+    background-color: #353533;
+    width: 300px;
+    height: 1020px;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    font-family: "Chaka";
+    font-size: 25pt;
+    display: block;
+    position: relative;
+    top: 20px;
+    line-height: 1020px;
+}
+
+.elementos{
+    position: relative;
+    top: 30px;
+    width: 700px;
+    height: 1040px;
+    left: 100px;
+    background-color: #D9D9D9;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px black;
+}
+.mat{
+    color: #353533;
+    background-color: white;
+    border-radius: 5px;
+    font-family: "Chaka";
+    text-transform: uppercase;
+    padding: 10px;
+    text-align: center;
+    border: 3px solid black;
+}
+.ponto{
+    font-family: "Inter";
+    font-size: 8pt;
+    margin-bottom: 2px;
+}
 
 section#sessao-sobre ol{
     font-family: "Inter";
