--- a/_css/carrinho.css
+++ b/_css/carrinho.css
@@ -26,53 +26,23 @@
     text-align: center;
     text-transform: uppercase;
 }
-.area-carrinho h2{
-    color: #353533;
-    margin-bottom: 10px;
-    font-family: "Chaka";
-    font-size: 13pt;
-    text-align: center;
-    text-transform: uppercase;
-}
 
-#engrenagem1{
-    font-size: 100px;
-    animation: spin 5s linear infinite;
-    transform-origin: center;
-    color: #353533;
-    left: 550px;
-    top: 70px;
+.area-livros{
+    display: inline-flex;
+
+}
+.area-compra{
+    width: 400px;
+    height: 500px;
+    background-color: #D9D9D9;
     position: relative;
-}
-#engrenagem2{
-    font-size: 100px;
-    animation: rotate-reverse 5s linear infinite;
-    transform-origin: center;
-    color: #353533;
-    left: 530px;
-    top: 40px;
-    position: relative;
-}
-
-
-@keyframes spin {
-    from { 
-        transform: rotate(0deg); 
-    }
-    to {
-        transform: rotate(360deg); 
-    }
-}
-@keyframes rotate-reverse {
-    from { 
-        transform: rotate(360deg); 
-    }
-    to {
-        transform: rotate(0deg); 
-    }
+    left: 900px;
+    box-shadow: 2px 1px 1px black;
+    border: 4px solid black;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 footer{
     clear:both;
-    margin-top: 200px;
 }
