--- a/_css/carrinho.css
+++ b/_css/carrinho.css
@@ -14,33 +14,36 @@
 
 
 
+.area-carrinho{
+    height: 500px;
+}
 .area-carrinho h1{
     color: white;
-    text-shadow: 2px 1px 1px black;
-    background-color: #353533;
-    border-radius: 5px;
+    background-color: #3c6e71;
     padding: 10px;
-    margin-bottom: 10px;
-    font-family: "Chaka";
-    font-size: 15pt;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.area-livros{
-    display: inline-flex;
-
-}
-.area-compra{
-    width: 400px;
-    height: 500px;
-    background-color: #D9D9D9;
-    position: relative;
-    left: 900px;
-    box-shadow: 2px 1px 1px black;
-    border: 4px solid black;
     border-radius: 5px;
-    margin-bottom: 20px;
+    border-bottom: 20px;
+    text-shadow: 2px 2px 3px black;
+    font-family: "Inter";
+    text-align: center;
+    font-size: 15pt;
+    text-transform: UPPERCASE;
+    border-right: 10px;
+}
+
+#compra{
+    display: inline-flex;
+    position: relative;
+    left: 1200px;
+    top: -20px;
+    color: white;
+    background-color: #353533;
+    padding: 15px;
+    font-family: "Chaka";
+    font-size: 14pt;
+    border-radius: 5px;
+    text-transform: UPPERCASE;
+    box-shadow: 2px 2px 3px black;
 }
 
 footer{
